# ts_atdometrajectory

./: .gitignore  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.cfg  setup.py
conda/: meta.yaml
config/: default.yaml  invalid_malformed.yaml  invalid_no_such_algorithm.yaml
doc/: conf.py  developer_guide.rst  index.rst  manifest.yaml  revision_history.rst  version_history.rst
doc/lsst.ts.ATDomeTrajectory/: index.rst
python/lsst/: __init__.py
python/lsst/ts/ATDomeTrajectory/: ATDomeTrajectoryAlgorithm.py  ATDomeTrajectoryCSC.py  ATDomeTrajectoryUtils.py  __init__.py  algorithms.py  base_algorithm.py  config_schema.py  dome_trajectory.py  elevation_azimuth.py  fake_dome.py  mock_dome.py  runATDomeTrajectoryCSC.py  simple_algorithm.py
python/lsst/ts/atdometrajectory/: __init__.py  base_algorithm.py  config_schema.py  dome_trajectory.py  elevation_azimuth.py  mock_dome.py  simple_algorithm.py
schema/: ATDomeTrajectory.yaml
tests/: testATDomeTrajectoryCSC.py  test_black.py  test_csc.py  test_dome_trajectory.py  test_fake_dome.py  test_mock_dome.py  test_utils.py  test_validation.py
tests/data/config/: _init.yaml  invalid_bad_max_daz.yaml  invalid_bad_vignette_max.yaml  invalid_bad_vignette_min.yaml  invalid_no_such_algorithm_config_name.yaml  valid.yaml
ups/: ts_atdometrajectory.table
