[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_atdometrajectory"
description = "A CSC to make the auxiliary telescope dome track the telescope at the Vera C. Rubin Observatory."
license = { text = "GPL" }
classifiers = ["Programming Language :: Python :: 3"]
urls = { documentation = "https://ts-atdometrajectory.lsst.io/", repository = "https://github.com/lsst-ts/ts_atdometrajectory" }
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = ["python"]

[project.scripts]
run_atdometrajectory = "lsst.ts.atdometrajectory:run_atdometrajectory"

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
